tests/pos/operators/pos.ts

export function main(): number {
    let y: number = 0;
    let x: number = _pos();
    assert(0 <= y);
    assert(0 <= x);
    return y;
}
